# hack2phase4

./: .env.template  CLAUDE.md  README.md  check_db.py  deployment.yaml  desktop.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vercel.json
backend/: 1.59.6  Dockerfile  cli.py  cookiejar.txt  database.db  deployment.yaml  form.txt  main.py  models.py  payload.json  pyproject.toml  requirements.txt  services.py  tools.py
backend/alembic/: env.py
backend/alembic/versions/: 22b524570291_initial_models.py  8f9c67d63da1_add_conversation_and_message_tables.py
backend/core/: config.py  database.py  security.py
backend/models/: __init__.py  conversation.py  message.py  task.py  user.py
backend/routes/: auth.py  chat.py  dashboard.py  tasks.py
backend/task_web_app_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_services.py
frontend/: Dockerfile  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: ChatPageContent.tsx  page.tsx
frontend/app/dashboard/: DashboardContent.tsx  page.tsx
frontend/app/dashboard/tasks/: TasksContent.tsx  (+1 more)
frontend/app/login/: LoginPageContent.tsx  page.tsx
frontend/app/logoutbutton/: LogoutButtonContent.tsx  page.tsx
frontend/app/mytasks/: MyTasksPageContent.tsx  page.tsx
frontend/app/register/: RegisterPageContent.tsx  page.tsx
frontend/lib/: api-service.ts
specs/: deployment_plan.md  env_secrets.md
tests/: test_auth.py  test_cors.py  test_flow.py  test_frontend_ui.py  test_services.py  test_tasks.py
