[project]
name = "task-web-app-backend"
version = "0.1.0"
description = "FastAPI backend for Task Web App"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.1",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "openai>=1.12.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["core", "models", "routes"]
